Updated .gitignore and static files for web app

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 data/
 flask_app/data/
 *.pkl
+*.sql
+ssh_script.txt
+Edstrom*
+PurpleBriefcase*
+project*.md
+src/read_pb_data.py
+src/jaccard_similarity.py
+src/derby.log
+src/metastore_db/
+src/seaborn_plot_templates.py
+flask_app/templates/index.html
+flask_app/templates/index2.html
+flask_app/templates/submit_bak.html
+flask_app/templates/get_jobs_in_selected_states.html
+flask_app/templates/3d-scatter-plot.html
+flask_app/templates/fixed.html
+flask_app/templates/predict_bak.html
+flask_app/templates/predict_template.html
+flask_app/templates/*.txt
